testdata/invalid/duplicate-map-key.pakt
# ERROR: duplicate key 'alice' in map
users:<str = int> = <
    'alice' = 1
    'bob'   = 2
    'alice' = 3
>
